@@ -1,4 +1,4 @@
-FROM docker.io/eclipse-temurin:21-noble
+FROM docker.io/eclipse-temurin:23-noble
 LABEL maintainer="https://github.com/PBH-BTN/Sparkle"
 USER 0
 ENV TZ=UTC
@@ -6,4 +6,4 @@ WORKDIR /app
 COPY tools/arthas-boot.jar /app/arthas-boot.jar
 COPY target/sparkle-0.0.1-SNAPSHOT.jar /app/sparkle.jar
 
-ENTRYPOINT ["java","-XX:+UseZGC", "-XX:MaxRAMPercentage=80.0", "-XX:+UseContainerSupport", "-jar","sparkle.jar"]
+ENTRYPOINT ["java","-XX:+UseG1GC", "-XX:MaxRAMPercentage=86.0", "-XX:+UseContainerSupport", "-jar","sparkle.jar"]
